--- a/src/app/components/estudiantes/estudiantes.component.html
+++ b/src/app/components/estudiantes/estudiantes.component.html
@@ -1,1 +1,42 @@
-<p>estudiantes works!</p>
+<h1>Lista de estudiantes</h1>
+
+<table mat-table [dataSource]="arrayEstudiantes" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- Position Column -->
+    <ng-container matColumnDef="legajo">
+      <th mat-header-cell *matHeaderCellDef> Legajo </th>
+      <td mat-cell *matCellDef="let element"> {{element.legajo}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef> Nombre y Apellido </th>
+      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="apellido">
+      <th mat-header-cell *matHeaderCellDef> Nota 1 </th>
+      <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="nota1">
+      <th mat-header-cell *matHeaderCellDef> Nota 2 </th>
+      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="nota2">
+        <th mat-header-cell *matHeaderCellDef> Nota 2 </th>
+        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  
+  
