--- a/src/app/components/estudiantes/estudiantes.component.html
+++ b/src/app/components/estudiantes/estudiantes.component.html
@@ -12,27 +12,27 @@
     </ng-container>
   
     <!-- Name Column -->
-    <ng-container matColumnDef="nombre">
-      <th mat-header-cell *matHeaderCellDef> Nombre y Apellido </th>
-      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+    <ng-container matColumnDef="dni">
+      <th mat-header-cell *matHeaderCellDef> DNI </th>
+      <td mat-cell *matCellDef="let element"> {{element.dni}} </td>
     </ng-container>
   
     <!-- Weight Column -->
-    <ng-container matColumnDef="apellido">
-      <th mat-header-cell *matHeaderCellDef> Nota 1 </th>
-      <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef> Nombre</th>
+      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
     </ng-container>
   
     <!-- Symbol Column -->
-    <ng-container matColumnDef="nota1">
-      <th mat-header-cell *matHeaderCellDef> Nota 2 </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    <ng-container matColumnDef="apellido">
+      <th mat-header-cell *matHeaderCellDef> Apellido </th>
+      <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
-    <ng-container matColumnDef="nota2">
-        <th mat-header-cell *matHeaderCellDef> Nota 2 </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    <ng-container matColumnDef="curso">
+        <th mat-header-cell *matHeaderCellDef> Curso </th>
+        <td mat-cell *matCellDef="let element"> {{element.curso}} </td>
       </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
